package com.tourism.forum.entity;

import jakarta.persistence.*;
import lombok.*;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

@Entity
@Table(name = "forum_posts")
@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class ForumPost extends BaseEntity {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "postid")
    private Integer postID;

    // Tham chiếu sang IAM Service bằng ID
    @Column(name = "user_id", nullable = false)
    private Integer userId;

    // Tham chiếu sang Tour Catalog Service bằng ID (optional)
    @Column(name = "tour_id")
    private Integer tourId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "category_id", nullable = false)
    private PostCategory category;

    @Column(nullable = false, length = 300)
    private String title;

    @Column(columnDefinition = "TEXT", nullable = false)
    private String content;

    @Column(length = 200)
    private String summary;

    @Column(length = 500)
    private String thumbnailUrl;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private PostType postType = PostType.BLOG;

    @Column(nullable = false)
    private Integer viewCount = 0;

    @Column(nullable = false)
    private Integer likeCount = 0;

    @Column(nullable = false)
    private Integer commentCount = 0;

    @Column(nullable = false)
    private Integer bookmarkCount = 0;

    @Column(nullable = false)
    private Integer shareCount = 0;

    @Column(nullable = false)
    private Boolean isPinned = false;

    @Column(nullable = false)
    private Boolean isFeatured = false;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private ContentStatus status = ContentStatus.PUBLISHED;

    private LocalDateTime publishedAt;

    @Column(nullable = false)
    @Builder.Default
    private Boolean isDeleted = false;

    @Column(name = "deleted_at")
    private LocalDateTime deletedAt;

    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PostImage> images = new ArrayList<>();

    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PostComment> comments = new ArrayList<>();

    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PostTag> postTags = new ArrayList<>();

    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PostLike> likes = new ArrayList<>();

    @OneToMany(mappedBy = "post", cascade = CascadeType.ALL, orphanRemoval = true)
    private List<PostBookmark> bookmarks = new ArrayList<>();

    // ── AI Moderation ─────────────────────────────────────────────────────────
    @Column(name = "moderation_score")
    private Double moderationScore; // 0.0 – 1.0 (0 = sạch, 1 = toxic)

    @Column(name = "moderation_label", length = 50)
    private String moderationLabel; // "SAFE" | "BORDERLINE" | "TOXIC"

    @Column(name = "moderation_reason", columnDefinition = "TEXT")
    private String moderationReason; // giải thích ngắn từ AI

    @Column(name = "moderated_at")
    private LocalDateTime moderatedAt;

    // Lý do admin từ chối/ẩn bài (khác moderationReason của AI)
    @Column(name = "admin_rejection_reason", columnDefinition = "TEXT")
    private String adminRejectionReason;

    // Soft-delete tracking
    @Column(name = "deleted_by")
    private Integer deletedBy;

    @Column(name = "delete_reason", columnDefinition = "TEXT")
    private String deleteReason;
}
